--- a/BisLeagues.Presentation/Views/News/Detail.cshtml
+++ b/BisLeagues.Presentation/Views/News/Detail.cshtml
@@ -149,7 +149,7 @@
                                         <figcaption class="overlay">
                                             <div class="position-center-center">
                                                 <ul class="btn-list">
-                                                    <li><a class="fa fa-link" href="#"></a></li>
+                                                    <li><a class="fa fa-link" href="@Url.Action("Resize", "Image", new { url = galleryPhoto.Photo.Path, width = 1903, height = 1903 })"></a></li>
                                                     <li><a href="@Url.Action("Resize", "Image", new { url = galleryPhoto.Photo.Path, width = 1903, height = 1903 })" data-rel="prettyPhoto[gallery]" rel="prettyPhoto[gallery]"><i class="fa fa-search"></i></a></li>
                                                 </ul>
                                             </div>
