--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
@@ -172,7 +172,7 @@
 <script src="~/Assets/js/wow-min.js"></script>
 <script src="~/Assets/js/main.js"></script>
 <script>
-    $("i.fa-search").on("click", function () {
+    $("i.searchTop").on("click", function () {
         $("#search").submit();
     });
 </script>
