--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
@@ -14,7 +14,7 @@
                 <div class="search-bar">
                     <form method="get" id="search" action="@Url.Action("Find", "Search")">
                         <input type="text" class="form-control" name="query" id="query" placeholder="takım, oyuncu falan ara..">
-                        <i class="fa fa-search"></i>
+                        <i class="fa fa-search searchTop"></i>
                     </form>
                 </div>
             </div>
