--- a/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
@@ -10,6 +10,13 @@
         <!-- Responsive Button -->
         <!-- User Login Option -->
         <ul class="user-login-option pull-right">
+            <li class="language-dropdown">
+                <div class="language-dropdown">
+                    <select class="language-dropdown" id="SeasonPick" name="SeasonPick">
+                        <option value="" selected>Sezon</option>
+                    </select>
+                </div>
+            </li>
             <li class="social-icon">
                 <ul class="social-icons style-5">
                     <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
