--- a/BisLeagues.Presentation/Views/Home/Index.cshtml
+++ b/BisLeagues.Presentation/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="row">
                         <!-- Match Fixture -->
-                       @await Component.InvokeAsync("Fixture", new { numberOfItems = 1 })
+                       @await Component.InvokeAsync("Fixture", new { numberOfItems = 5 })
                         <!-- Match Fixture -->
                         <!-- Upcoming Fixture -->
                         <div class="col-sm-8 col-xs-7 r-full-width hidden-sm hidden-xs">
@@ -110,10 +110,20 @@
                                         <ul id="latest-news-slider" class="latest-news-slider">
                                             @foreach (var newItem in Model.TopNews)
                                             {
-                                                <li>
+                                            <li>
+                                                @if (newItem.CoverPhoto != null)
+                                                {
                                                     <img src="@Url.Action("Resize", "Image", new { url = newItem.CoverPhoto.Path, width = 615, height = 346 })" alt="@newItem.Caption">
-                                                    <p>@newItem.ShortDescription<a href="@Url.Action("Detail","News", new { id = newItem.Id })">DEVAMINI OKU</a></p>
-                                                </li>
+
+                                                }
+                                                else
+                                                {
+                                                    <img src="#" alt="@newItem.Caption">
+
+                                                }
+
+                                                <p>@newItem.ShortDescription<a href="@Url.Action("Detail","News", new { id = newItem.Id })">DEVAMINI OKU</a></p>
+                                            </li>
                                             }
                                         </ul>
                                     </div>
