--- a/BisLeagues.Presentation/Views/Exchange/Index.cshtml
+++ b/BisLeagues.Presentation/Views/Exchange/Index.cshtml
@@ -20,46 +20,49 @@
         }
     }
 }
-@section Heading{
+@if (!Model.NoMatchFound)
+{
+
+    @section Heading{
 
 
 
-    <!-- Page Heading & Breadcrumbs  -->
-    <div class="page-heading-breadcrumbs hidden-xs">
-        <div class="container">
-            <h2>Borsa Durumu</h2>
-            <ul class="breadcrumbs">
-                <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
-                <li>Borsa Durumu</li>
-            </ul>
+        <!-- Page Heading & Breadcrumbs  -->
+        <div class="page-heading-breadcrumbs hidden-xs">
+            <div class="container">
+                <h2>Borsa Durumu</h2>
+                <ul class="breadcrumbs">
+                    <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
+                    <li>Borsa Durumu</li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <!-- Page Heading & Breadcrumbs  -->
-    <!-- Page Heading banner -->
-    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
-        <div class="container theme-padding">
-            <ul id="match-detail-slider" class="match-detail-slider">
-                <li>
-                    <div class="pager-heading match-detail h-white">
-                        <span class="pull-left @homeTag">
-                            <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Home.Logo.Path, width = 200, height = 200 })" alt="">
-                        </span>
-                        <div class="vs-match-heading position-center-center">
-                            <strong class="vs-match-result">@Model.LastMatchsResult.HomeScore<span>Vs</span>@Model.LastMatchsResult.AwayScore</strong>
-                            <span class="end-time"><i class="fa fa-clock-o"></i>@Model.LastMatchsResult.Match.MatchDate.ToLocalTime().ToString("dd MMMM yyyy", System.Globalization.CultureInfo.InvariantCulture)</span>
+        <!-- Page Heading & Breadcrumbs  -->
+        <!-- Page Heading banner -->
+        <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
+            <div class="container theme-padding">
+                <ul id="match-detail-slider" class="match-detail-slider">
+                    <li>
+                        <div class="pager-heading match-detail h-white">
+                            <span class="pull-left @homeTag">
+                                <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Home.Logo.Path, width = 200, height = 200 })" alt="">
+                            </span>
+                            <div class="vs-match-heading position-center-center">
+                                <strong class="vs-match-result">@Model.LastMatchsResult.HomeScore<span>Vs</span>@Model.LastMatchsResult.AwayScore</strong>
+                                <span class="end-time"><i class="fa fa-clock-o"></i>@Model.LastMatchsResult.Match.MatchDate.ToLocalTime().ToString("dd MMMM yyyy", System.Globalization.CultureInfo.InvariantCulture)</span>
+                            </div>
+                            <span class="pull-right @awayTag ">
+                                <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Away.Logo.Path, width = 200, height = 200 })" alt="">
+                            </span>
                         </div>
-                        <span class="pull-right @awayTag ">
-                            <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Away.Logo.Path, width = 200, height = 200 })" alt="">
-                        </span>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <!-- Page Heading banner -->
+        <!-- Page Heading banner -->
 
+    }
 }
-
 <div class="theme-padding white-bg">
     <div class="container">
         <div class="row">
