--- a/BisLeagues.Presentation/Views/Match/PastMatches.cshtml
+++ b/BisLeagues.Presentation/Views/Match/PastMatches.cshtml
@@ -20,97 +20,102 @@
         }
     }
 }
-
-@section Heading{
-
-
-
-    <!-- Page Heading & Breadcrumbs  -->
-    <div class="page-heading-breadcrumbs hidden-xs">
-        <div class="container">
-            <h2>Geçmiş Maçlar</h2>
-            <ul class="breadcrumbs">
-                <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
-                <li>Geçmiş Maçlar</li>
-            </ul>
-        </div>
-    </div>
-    <!-- Page Heading & Breadcrumbs  -->
-    <!-- Page Heading banner -->
-    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
-        <div class="container theme-padding">
-            @if (Model.LastMatchsResult != null && Model.LastMatchsResult.Match != null)
-            {
-                <ul id="match-detail-slider" class="match-detail-slider">
-                    <li>
-                        <div class="pager-heading match-detail h-white">
-                            <span class="pull-left @homeTag">
-                                <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Home.Logo.Path, width = 200, height = 200 })" alt="">
-                            </span>
-                            <div class="vs-match-heading position-center-center">
-                                <strong class="vs-match-result">@Model.LastMatchsResult.HomeScore<span>Vs</span>@Model.LastMatchsResult.AwayScore</strong>
-                                <span class="end-time"><i class="fa fa-clock-o"></i>@Model.LastMatchsResult.Match.MatchDate.ToLocalTime().ToString("dd MMMM yyyy", System.Globalization.CultureInfo.InvariantCulture)</span>
-                            </div>
-                            <span class="pull-right @awayTag ">
-                                <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Away.Logo.Path, width = 200, height = 200 })" alt="">
-                            </span>
-                        </div>
-                    </li>
+@if (Model.NoMatchFound != true)
+{
+    @section Heading{
+        <!-- Page Heading & Breadcrumbs  -->
+        <div class="page-heading-breadcrumbs hidden-xs">
+            <div class="container">
+                <h2>Geçmiş Maçlar</h2>
+                <ul class="breadcrumbs">
+                    <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
+                    <li>Geçmiş Maçlar</li>
                 </ul>
-            }
-        </div>
-    </div>
-    <!-- Page Heading banner -->
-
-}
-<!-- Match -->
-<div class="theme-padding white-bg">
-    <div class="container">
-        <div class="row">
-            <!-- match Contenet -->
-            <div class="matches-shedule-holder">
-                <div class="col-lg-12 col-sm-12">
-
-                    <!-- Matches Dates Shedule -->
-                    <div class="matches-dates-shedule">
-                        <ul>
-                            @foreach (var item in Model.NewsOfPastMatches)
-                            {
-                            <li>
-                                <a href="@Url.Action("Detail", "Team", new { item.Match.Home.Id })"><span class="pull-left"><img src="@Url.Action("Resize", "Image", new { url = item.Match.Home.Logo.Path, width = 105, height = 105 })" alt="@item.Match.Home.Name"></span></a>
-                                <a href="@Url.Action("Detail", "Team", new { item.Match.Away.Id })"><span class="pull-right"><img src="@Url.Action("Resize", "Image", new { url = item.Match.Away.Logo.Path, width = 105, height = 105 })" alt="@item.Match.Away.Name"></span></a>
-                                <div class="detail">
-                                    <a href="@Url.Action("Detail", "News", new { item.Id })"><i>Maçın Haberine Git</i></a>
-                                    <strong>@item.Match.Home.Name<i class="red-color"> | @item.Match.Result.HomeScore - @item.Match.Result.AwayScore | </i> @item.Match.Away.Name</strong>
-                                    <!--<span class="location-marker"><i class="fa fa-map-marker"></i>3358 Evergreen Lane England</span>-->
-                                </div>
-                            </li>
-                            }
-                        </ul>
-                    </div>
-                    <!-- Matches Dates Shedule -->
-                    <!-- Pagination -->
-                    <div class="pagination-holder">
-                        <ul class="pagination">
-                            <li><a href="#"><i class="fa fa-angle-double-left"></i>Previous</a></li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                            <li><a href="#">7</a></li>
-                            <li><a href="#"><i class="fa fa-ellipsis-h"></i></a></li>
-                            <li><a href="#">28</a></li>
-                            <li><a href="#">Next<i class="fa fa-angle-double-right"></i></a></li>
-                        </ul>
-                    </div>
-                    <!-- Pagination -->
-
-                </div>
             </div>
-            <!-- match Contenet -->
+        </div>
+        <!-- Page Heading & Breadcrumbs  -->
+        <!-- Page Heading banner -->
+        <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
+            <div class="container theme-padding">
+                @if (Model.LastMatchsResult != null && Model.LastMatchsResult.Match != null)
+                {
+                    <ul id="match-detail-slider" class="match-detail-slider">
+                        <li>
+                            <div class="pager-heading match-detail h-white">
+                                <span class="pull-left @homeTag">
+                                    <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Home.Logo.Path, width = 200, height = 200 })" alt="">
+                                </span>
+                                <div class="vs-match-heading position-center-center">
+                                    <strong class="vs-match-result">@Model.LastMatchsResult.HomeScore<span>Vs</span>@Model.LastMatchsResult.AwayScore</strong>
+                                    <span class="end-time"><i class="fa fa-clock-o"></i>@Model.LastMatchsResult.Match.MatchDate.ToLocalTime().ToString("dd MMMM yyyy", System.Globalization.CultureInfo.InvariantCulture)</span>
+                                </div>
+                                <span class="pull-right @awayTag ">
+                                    <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Away.Logo.Path, width = 200, height = 200 })" alt="">
+                                </span>
+                            </div>
+                        </li>
+                    </ul>
+                }
+            </div>
+        </div>
+        <!-- Page Heading banner -->
 
+    }
+    <!-- Match -->
+    <div class="theme-padding white-bg">
+        <div class="container">
+            <div class="row">
+                <!-- match Contenet -->
+                <div class="matches-shedule-holder">
+                    <div class="col-lg-12 col-sm-12">
+
+                        <!-- Matches Dates Shedule -->
+                        <div class="matches-dates-shedule">
+                            <ul>
+                                @foreach (var item in Model.NewsOfPastMatches)
+                                {
+                                    <li>
+                                        <a href="@Url.Action("Detail", "Team", new { item.Match.Home.Id })"><span class="pull-left"><img src="@Url.Action("Resize", "Image", new { url = item.Match.Home.Logo.Path, width = 105, height = 105 })" alt="@item.Match.Home.Name"></span></a>
+                                        <a href="@Url.Action("Detail", "Team", new { item.Match.Away.Id })"><span class="pull-right"><img src="@Url.Action("Resize", "Image", new { url = item.Match.Away.Logo.Path, width = 105, height = 105 })" alt="@item.Match.Away.Name"></span></a>
+                                        <div class="detail">
+                                            <a href="@Url.Action("Detail", "News", new { item.Id })"><i>Maçın Haberine Git</i></a>
+                                            <strong>@item.Match.Home.Name<i class="red-color"> | @item.Match.Result.HomeScore - @item.Match.Result.AwayScore | </i> @item.Match.Away.Name</strong>
+                                            <!--<span class="location-marker"><i class="fa fa-map-marker"></i>3358 Evergreen Lane England</span>-->
+                                        </div>
+                                    </li>
+                                }
+                            </ul>
+                        </div>
+                        <!-- Matches Dates Shedule -->
+                        <!-- Pagination -->
+                        <div class="pagination-holder">
+                            <ul class="pagination">
+                                <li><a href="#"><i class="fa fa-angle-double-left"></i>Previous</a></li>
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                                <li><a href="#">7</a></li>
+                                <li><a href="#"><i class="fa fa-ellipsis-h"></i></a></li>
+                                <li><a href="#">28</a></li>
+                                <li><a href="#">Next<i class="fa fa-angle-double-right"></i></a></li>
+                            </ul>
+                        </div>
+                        <!-- Pagination -->
+
+                    </div>
+                </div>
+                <!-- match Contenet -->
+
+            </div>
         </div>
     </div>
-</div>
-<!-- Match -->
+    <!-- Match -->
+}
+else
+{
+    <div style="margin:auto;width: 50%;margin-top:100px; margin-bottom:100px;">
+        <h1>Ufukta hiç maç yok !</h1>
+    </div>
+}
