--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
@@ -203,7 +203,7 @@
             data: { selectedSeasonId: $("#SeasonPick").val() },
             dataType: 'json',
             success: function (response) {
-                window.location.reload(false);
+                window.location.reload(true);
             },
             error: function (ex) {
                 alert('Failed to set season.' + ex.statusCode);
