--- a/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
@@ -44,7 +44,7 @@
                             <h2>Giriş Yap<button class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button></h2>
                             <form action="@Url.Action("Login", "Authentication")" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="username" placeholder="Kullanıcı Adı" required>
+                                    <input type="text" class="form-control" name="username" placeholder="Eposta" required>
                                     <i class=" fa fa-envelope"></i>
                                 </div>
                                 <div class="form-group">
@@ -96,10 +96,6 @@
                                 <div class="form-group">
                                     <input type="email" class="form-control" name="email" placeholder="Email" required>
                                     <i class=" fa fa-envelope"></i>
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="userName" placeholder="Kullanıcı Adı" required>
-                                    <i class=" fa fa-user"></i>
                                 </div>
                                 <div class="form-group">
                                     <input type="date" class="form-control" name="birthDate" placeholder="Doğum Tarihi" required>
